# meetily

./: Cargo.toml
meetily-cli/: Cargo.toml
meetily-cli/src/: main.rs
