[package]
name = "meetily-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "meetily-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4.3", features = ["derive"] }
dirs = "5.0.1"

symphonia = { version = "0.5.4", features = ["aac", "isomp4", "mp3", "flac", "ogg", "vorbis", "pcm", "wav", "opt-simd"] }
rubato = { version = "0.15.0", features = ["fft_resampler"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api", "metal", "coreml"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.13.2", features = ["raw-api"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
